# docs/swagger.yaml
@@ -227,6 +227,36 @@ paths:
       tags:
       - User
   /api/v1/user/profile/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get the profile of a user by their ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/profile.UpdateProfileInput'
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get user profile
+      tags:
+      - User
     patch:
       consumes:
       - application/json
